RESOLVED FIXED68542
REGRESSION (r95474): Unable to type anywhere in nightly builds in WebKit1 mode
https://bugs.webkit.org/show_bug.cgi?id=68542
Summary REGRESSION (r95474): Unable to type anywhere in nightly builds in WebKit1 mode
Kiyoto Tamura
Reported 2011-09-21 09:56:37 PDT
Basically, WebKit fails to recognize many the keyboard inputs. Mainly, 1. I cannot type the URL into the URL bar or the Google search bar. 2. I cannot type into forms or contentEditable. I can, however, use cmd + l/q/w/r/ family of shortcut keys (as in the browser responds to events associated with these shortcuts).
Attachments
fix (1.35 KB, patch)
2011-10-02 12:07 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-09-21 16:57:15 PDT
*** Bug 68569 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 2 2011-09-21 16:59:44 PDT
I cannot reproduce this issue with nightly r95663 on Lion with Safari 5.1, or on Snow Leopard with Safari 5.0. Not sure what's going on.
Randy Baum
Comment 3 2011-09-21 17:12:32 PDT
This is occurring with Leopard (10.5.8) with the latest WebKit, even as of the 95673 build; Safari 5.0.6 (see comments from "duplicate" bug 68569). In addition, when using bookmarks to navigate pages, there is a residual image that pops up between sessions -- going from Top Sites to a page brings up the "Welcome to WebKit" page (last one seen before accessing Top Sites). Happens each time going forward.
Alexey Proskuryakov
Comment 4 2011-09-24 21:43:16 PDT
*** Bug 68768 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5 2011-09-24 21:50:21 PDT
Actually, I can reproduce on another machine - not sure why I couldn't before. The problem is that -_usesDocumentViews was removed from WebView. It can be easily put back for now, always returning true.
Anders Carlsson
Comment 6 2011-09-25 10:45:12 PDT
Who is calling _usesDocumentViews? Safari?
Alexey Proskuryakov
Comment 7 2011-09-25 10:51:36 PDT
Safari 5.0.x, it appears. We've never supported old Safari in nightlies before, so maybe this is OK to WONTFIX.
Kiyoto Tamura
Comment 8 2011-09-25 12:32:27 PDT
Alex: Indeed, the problem went away once I updated Safari to 5.1 from 5.0.6 on my Snow Leopard. WONTFIX sounds good to me.
Alexey Proskuryakov
Comment 9 2011-09-28 09:52:39 PDT
*** Bug 68987 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 10 2011-09-28 22:58:08 PDT
*** Bug 69057 has been marked as a duplicate of this bug. ***
Jurek R.
Comment 11 2011-09-29 04:27:09 PDT
Why you can't fix this and use multi system compatible event handling? There are good reasons not to use recent Safari 5 update from Apple: It will slow down the browser window a lot, so why slowing down a good system?
Mark Rowe (bdash)
Comment 12 2011-09-29 22:58:43 PDT
If it’s really just the single missing method that’s causing the problem then we should just add it back temporarily.
Alexey Proskuryakov
Comment 13 2011-09-30 08:47:08 PDT
*** Bug 69125 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 14 2011-10-02 12:07:48 PDT
Created attachment 109426 [details] fix Well, this does fix the issue indeed. I'm still not sure if it's worth fixing, but any reviewer should feel free to set r+/cq+ (and re-open the bug for landing) if they feel like it.
Mark Rowe (bdash)
Comment 15 2011-10-02 12:46:05 PDT
Comment!
WebKit Review Bot
Comment 16 2011-10-02 13:01:11 PDT
Comment on attachment 109426 [details] fix Clearing flags on attachment: 109426 Committed r96478: <http://trac.webkit.org/changeset/96478>
WebKit Review Bot
Comment 17 2011-10-02 13:01:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.