REGRESSION (r95474): Unable to type anywhere in nightly builds in WebKit1 mode https://bugs.webkit.org/show_bug.cgi?id=68542

Reviewed by Mark Rowe.

* WebView/WebView.mm: (-[WebView _usesDocumentViews]): Re-add this method for now.


Canonical link: https://commits.webkit.org/85240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96478 268f45cc-cd09-0410-ab3c-d52691b4dbfc